@startuml

Arena *-- Ground
Arena *-- ArenaGrid
Arena *-- "0..n" Entity
Arena *-- "0..n" Spell
Arena --> ArenaState

ArenaState o-- Ground
ArenaState o-- ArenaGrid
ArenaState o-- "0..n" Entity
ArenaState o-- "0..n" Spell

Mobile <|-- ArenaElement
ArenaElement <|-- Entity
ArenaElement <|-- Spell
Entity o-- "0..n" Skill
Entity *-- "0..n" Buff
Entity o--* EntityControl
EntityControl <|-- PlayerControl


abstract ArenaElement {
    + update(state) = 0
}

abstract Spell {
    + on_init(state) = 0
    + on_update(state) = 0
    + on_wall_collision(state, position) = 0
    + on_entity_collision(state, entity) = 0
}

abstract EntityControl {
    + on_init(state) = 0
    + on_update(state) = 0
    + on_collision(state, position) = 0
}

@enduml
